video thumbnail not showing in mobile version fixing.

--- a/main.css
+++ b/main.css
@@ -40,7 +40,6 @@ main {
     height: auto;
     margin-top: 10px;
     cursor: pointer;
-    background: black;
 } 
 
 .video-card {
